Fix Event price spacing

--- a/wp-content/themes/wpf/style.css
+++ b/wp-content/themes/wpf/style.css
@@ -1991,12 +1991,12 @@ FOOTER #footnav UL LI A:after {
 
 .event-body .event-sidebar .pricing {
   display: flex;
-  justify-content: space-between;
   margin-bottom: 3em;
 }
 
 .event-body .event-sidebar .pricing .price {
   width: 18.5%;
+  margin-left: 1.875%;
   background: #1C305B;
   color: #FFFFFF;
   font-family: 'Geometos', sans-serif;
@@ -2006,6 +2006,8 @@ FOOTER #footnav UL LI A:after {
   text-align: center;
   position: relative;
 }
+
+.event-body .event-sidebar .pricing .price:first-of-type { margin-left: 0; }
 
 .event-body .event-sidebar .pricing .price:before {
   content: "";
